fixed footer spacing

--- a/index.css
+++ b/index.css
@@ -124,7 +124,8 @@
     }
     
     #menuScreen {
-        background-color: #293780;
+        background: url('images/menubackground.svg');
+        background-repeat: round;
         height: 650px;
         width: 500px;
         display: flex;
@@ -145,7 +146,8 @@
     
     #iconWrapper {
         align-items: center;
-        justify-content: space-around;
+        width: 100%;
+        justify-content: space-evenly;
         display: flex;
         flex-direction: row;
     }
